[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pathopatch"
version = "1.0.4"
authors = [
    {name = "Fabian Hörst", email = "fabian.hoerst@uk-essen.de"},
]
description = "PathoPatch - Accelerating Artificial Intelligence Based Whole Slide Image Analysis with an Optimized Preprocessing Pipeline"
readme = "docs/README_pypi.md"
requires-python = ">=3.9"
keywords = ["python", "pathopatch"]
license = {text = "CC BY-NC-SA 4.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Other",
]
dependencies = [
    "Pillow>=9.5.0",
    "PyYAML",
    "Shapely==1.8.5.post1",
    "colorama",
    "future",
    "geojson>=3.0.0",
    "matplotlib",
    "natsort",
    "numpy>1.22,<1.24",
    "opencv_python_headless",
    "openslide_python",
    "pandas",
    "pydantic==1.10.4",
    "rasterio==1.3.5.post1",
    "requests",
    "scikit-image",
    "setuptools<=65.6.3",
    "tqdm",
    "torchvision",
    "torch",
    "wsidicom==0.20.4",
    "wsidicomizer==0.14.1",
    "pydicom==2.4.4",
]

[project.urls]
Homepage = "https://github.com/TIO-IKIM/PathoPatcher"

[project.scripts]
wsi_extraction = "pathopatch.wsi_extraction:main"
annotation_conversion = "pathopatch.annotation_conversion:main"
macenko_vector_generation = "pathopatch.macenko_vector_generation:main"

[tool.setuptools]
packages = {find = {exclude = ["tests", "tests.*"]}}
package-data = {"pathopatch" = ["data/*"]}
